# Orchestration_Experiment-

./: .gitignore  cleanup-agents.sh  start-agents.sh
CLINICAL-SUPPLY/: .gitignore  Dockerfile  README.md  call_recruitment_agent.py  docker-compose.yaml  docker-entrypoint.sh  requirements.txt  server_supply.py
CLINICAL-SUPPLY/app/: __init__.py  a2a_integration.py  agentops_instrumentation.py  api.py  (+11 more)
Patient-Recruitment/: .gitignore  Dockerfile  README.md  call_supply_agent.py  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  server_recruitment.py
Patient-Recruitment/Data/: Patient_Data_50_Records.xlsx  Site_History.csv  clinical_trial_site_history.xlsx  eligibility_results_v3_20251112_143736.xlsx  patient_site_mapping.xlsx  patients.csv
Patient-Recruitment/app/: config.py  main.py  pipeline_v3.py  schemas.py  streamlit_app_v3.py
Patient-Recruitment/app/agents/: agno_agent.py  eligibility_agent.py
Patient-Recruitment/app/routers/: debug.py  run.py
Patient-Recruitment/app/services/: a2a_integration.py  criteria_extractor.py  excel_writer.py  pdf_extractor.py  rules_engine.py  site_ranking.py
Patient-Recruitment/app/utils/: fileio.py
Patient-Recruitment/frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
Patient-Recruitment/frontend/src/: App.jsx  index.css
Patient-Recruitment/frontend/src/components/: ExcelTableViewer.jsx  FileUpload.jsx  ProgressBar.jsx  ResultsDisplay.jsx
Patient-Recruitment/frontend/src/services/: api.js
Planner-Agent/: docker-compose.yml  test_planner.py
(+35 files in other folders)
